cabal-version:      2.4
name:               grid-lang
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:

-- The package author(s).
-- author:

-- An email address to which users can send suggestions, bug reports, and patches.
-- maintainer:

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

common common-options
  build-depends:    base >=4.9 && <5
  default-language: Haskell2010
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wredundant-constraints
    -fhide-source-paths -Wpartial-fields -interactive-print=Text.Pretty.Simple.pPrint

library
  import:          common-options
  hs-source-dirs:  src
  exposed-modules: Lib
                   Positionable
                   Box
                   AST
                   Render
                   -- Data.Propagator
                   -- Data.Propagator.Cell
                   -- Data.Propagator.Class
                   -- Data.Propagator.Name
                   -- Data.Propagator.Num
                   -- Data.Propagator.Prop
                   -- Data.Propagator.Supported
  build-depends:
    , pretty-simple
    , containers
    , free
    , comonad
    , profunctors
    , mtl
    -- , linear
    , lens
    , data-reify
    , ghc-prim
    , hashable
    , intervals
    , primitive
    , unique
    , unordered-containers
    , blaze-html
    , blaze-markup
    , type-map

executable grid-lang-exe
    import:           common-options
    hs-source-dirs:   app
    main-is:          Main.hs
    build-depends:    grid-lang
    default-language: Haskell2010
    ghc-options:    -threaded -rtsopts -with-rtsopts=-N
